small changes to ios projects and new windows phone project

--- a/.gitignore
+++ b/.gitignore
@@ -10,17 +10,21 @@ ExtendedDisplay.Client.iOS/bin/*
 ExtendedDisplay.Client.iOS/obj/*
 ExtendedDisplay.Client.WinForms/bin/*
 ExtendedDisplay.Client.WinForms/obj/*
-ExtendedDisplay.Framework.Client/bin/*
-ExtendedDisplay.Framework.Client/obj/*
-ExtendedDisplay.Framework.Cross/bin/*
-ExtendedDisplay.Framework.Cross/obj/*
-ExtendedDisplay.Framework.CrossAndroid/bin/*
-ExtendedDisplay.Framework.CrossAndroid/obj/*
-ExtendedDisplay.Framework.CrossIos/bin/*
-ExtendedDisplay.Framework.CrossIos/obj/*
-ExtendedDisplay.Framework.CrossWin/bin/*
-ExtendedDisplay.Framework.CrossWin/obj/*
+ExtendedDisplay.Client.MacOsX/bin/*
+ExtendedDisplay.Client.MacOsX/obj/*
+ExtendedDisplay.Framework.Android/bin/*
+ExtendedDisplay.Framework.Android/obj/*
+ExtendedDisplay.Framework.Ios/bin/*
+ExtendedDisplay.Framework.Ios/obj/*
 ExtendedDisplay.Framework.Win/bin/*
 ExtendedDisplay.Framework.Win/obj/*
+ExtendedDisplay.Framework.WinPhone/bin/*
+ExtendedDisplay.Framework.WinPhone/obj/*
+ExtendedDisplay.Server.Android/bin/*
+ExtendedDisplay.Server.Android/obj/*
 ExtendedDisplay.Server.Console/bin/*
 ExtendedDisplay.Server.Console/obj/*
+ExtendedDisplay.Server.Ios/bin/*
+ExtendedDisplay.Server.Ios/obj/*
+ExtendedDisplay.Server.MacConsole/bin/*
+ExtendedDisplay.Server.MacConsole/obj/*
