--- a/ExtendedDisplay.Server.iOS/ExtendedDisplay.Server.iOS.csproj
+++ b/ExtendedDisplay.Server.iOS/ExtendedDisplay.Server.iOS.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -95,7 +95,7 @@
   <ItemGroup>
     <InterfaceDefinition Include="ExtendedDisplay_Server_iOSViewController.xib" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\ExtendedDisplay.Framework.iOS\ExtendedDisplay.Framework.iOS.csproj">
       <Project>{DFA52ADF-DDB8-4014-B91D-108E61C9A539}</Project>
