--- a/ExtendedDisplay.Client.MacOsX/ExtendedDisplay.Client.MacOsX.csproj
+++ b/ExtendedDisplay.Client.MacOsX/ExtendedDisplay.Client.MacOsX.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>ExtendedDisplay.Client.MacOsX</RootNamespace>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
     <AssemblyName>ExtendedDisplay.Client.MacOsX</AssemblyName>
+    <SuppressXamMacUpsell>True</SuppressXamMacUpsell>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Mixed Platforms' ">
     <DebugSymbols>true</DebugSymbols>
