--- a/ExtendedDisplay.Server.iOS/ExtendedDisplay.Server.iOS.csproj
+++ b/ExtendedDisplay.Server.iOS/ExtendedDisplay.Server.iOS.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ExtendedDisplay_Server_iOSViewController.designer.cs">
       <DependentUpon>ExtendedDisplay_Server_iOSViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="DrawingView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="ExtendedDisplay_Server_iOSViewController.xib" />
